done with the basic model with small array

--- a/DBScan Algorithim UD/DBScan Sklearn .ipynb
+++ b/DBScan Algorithim UD/DBScan Sklearn .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f2d31892",
+   "id": "23ddfb38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "294af74a",
+   "id": "f6a1a1da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d246524b",
+   "id": "3a42262a",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0763412f",
+   "id": "4691bec3",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f170d015",
+   "id": "2817d27e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "42d68d9b",
+   "id": "fd7a637b",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "80870f7a",
+   "id": "dc405f3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "65882fb8",
+   "id": "76876765",
    "metadata": {},
    "outputs": [
     {
@@ -140,16 +140,112 @@
     }
    ],
    "source": [
-    "c.labels_# this is because all the min samples need to be 6 but it is not the case due to the outlier in the daata"
+    "c.labels_# this is because all the min samples need to be 6 but it is not the case due to the outlier \n",
+    "#in the data  thats why all the points are classified as noice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8925d95a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in k_mean model there is a predict function but in db there is no predict method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4502a696",
+   "metadata": {},
+   "source": [
+    "# An importance difference between k_means and DBScan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7e8f9ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "km = KMeans(n_clusters=2,random_state=0).fit(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "53711916",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 1])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "km.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "91fd14e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "km.predict([[0,0],[12,3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ec8c4a2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.6,  4.8],\n",
+       "       [25. , 80. ]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "km.cluster_centers_"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee47c2e6",
+   "id": "42b1324f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# the above are the centers and if new data comes then the "
+   ]
   }
  ],
  "metadata": {
