seen the difference between the the dbscan and the kmeans as dbscan does not have predict method whereas the kmean has it

--- a/DBScan Algorithim UD/DBScan Sklearn .ipynb
+++ b/DBScan Algorithim UD/DBScan Sklearn .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "23ddfb38",
+   "id": "a96375fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f6a1a1da",
+   "id": "f7ff0a05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3a42262a",
+   "id": "985d38ff",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4691bec3",
+   "id": "495b76ae",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2817d27e",
+   "id": "667aaa1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fd7a637b",
+   "id": "1ae3277a",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dc405f3a",
+   "id": "9ad02afc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "76876765",
+   "id": "a80049a4",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8925d95a",
+   "id": "ee5a1089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4502a696",
+   "id": "ae76ad66",
    "metadata": {},
    "source": [
     "# An importance difference between k_means and DBScan"
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7e8f9ae5",
+   "id": "7443be50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "53711916",
+   "id": "e375e8cd",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "91fd14e6",
+   "id": "1d1e1d6b",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ec8c4a2b",
+   "id": "5979a6dd",
    "metadata": {},
    "outputs": [
     {
@@ -239,13 +239,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "b670737d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the above are the centers and if new data comes then the distances between these centers are calculated\n",
+    "km.predict([[25,79],[23,78]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "42b1324f",
+   "id": "2caf9579",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# the above are the centers and if new data comes then the "
-   ]
+   "source": []
   }
  ],
  "metadata": {
