starting with the kmean model on the same dataset

--- a/DBScan Algorithim UD/DBScan Sklearn .ipynb
+++ b/DBScan Algorithim UD/DBScan Sklearn .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c26cd424",
+   "id": "9ef7ba93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a816057f",
+   "id": "aa6d7cf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a149a40d",
+   "id": "5b3932b8",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7ef69002",
+   "id": "2195e554",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "76512fce",
+   "id": "108861dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "77d4f2f2",
+   "id": "d8694778",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8ccd80e1",
+   "id": "1d3d61cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "051367dc",
+   "id": "074f45ef",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c2ec787d",
+   "id": "2e32882c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a620149",
+   "id": "0c4232e9",
    "metadata": {},
    "source": [
     "# An importance difference between k_means and DBScan"
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ab2f5fb4",
+   "id": "8f8f09b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "137866e5",
+   "id": "887e4b3d",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "12e2b072",
+   "id": "05f83284",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "75561da4",
+   "id": "5dd80939",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6bee06ab",
+   "id": "89b881fa",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb5baf2",
+   "id": "2820c636",
    "metadata": {},
    "source": [
     "# Deciding the optimal value for the epsilon"
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8ad58cf9",
+   "id": "6eebfb0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "32e158ab",
+   "id": "59f8b236",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "99adfb6b",
+   "id": "946264d1",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "565d54eb",
+   "id": "353b985d",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "400784b9",
+   "id": "e95d7334",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9477019a",
+   "id": "10dadcd7",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9c548571",
+   "id": "e8e9e7d0",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5db4c5a5",
+   "id": "224f4abf",
    "metadata": {
     "scrolled": true
    },
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a3cb9e66",
+   "id": "8be18d77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d73ddc62",
+   "id": "4b8a3f15",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "dda04f0f",
+   "id": "054a9e75",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "73c0e56a",
+   "id": "5b67fadc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d24ce33e",
+   "id": "46a33f07",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "26387219",
+   "id": "f11a2ed1",
    "metadata": {
     "scrolled": true
    },
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "7e25adab",
+   "id": "808a4ab6",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "ff166f1e",
+   "id": "b8e6cc29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "3ea51db2",
+   "id": "5ba9d646",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "e400e4cb",
+   "id": "3330e49b",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "76929b00",
+   "id": "0f8bd49d",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "424077b1",
+   "id": "ad3face5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "0da3b80b",
+   "id": "0078fa80",
    "metadata": {},
    "outputs": [
     {
@@ -694,8 +694,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 163,
+   "id": "de647308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "km = KMeans(n_clusters=4)\n",
+    "y_mean = km.fit_predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0f2b0474",
+   "id": "049dd013",
    "metadata": {},
    "outputs": [],
    "source": []
