--- a/Ensemble Algos/Boosting/Xtreme Gradient Boosting/Xgboost Regression.ipynb
+++ b/Ensemble Algos/Boosting/Xtreme Gradient Boosting/Xgboost Regression.ipynb
@@ -3,15 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa6668b0",
+   "id": "4e256894",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6f86a63",
+   "id": "6db6cab0",
    "metadata": {},
    "outputs": [],
    "source": []
